--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/bower_components/
 /node_modules/
-/.pulp-cache/
 /output/
-/build/
+/dist/
 /generated-docs/
 /.psc-package/
 /.psc*
 /.purs*
 /.psa*
 .cache
+.spago
+.DS_Store
